# ChangeLog for media-tv/em28xx-new
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Jul 2008; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de>
  +em28xx-new-0.0.20080709.276798609861364.ebuild,
  +files/em28xx-new-2.6.26.patch:
  new snapshot, add patch for kernel 2.6.26

  23 Jun 2008; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> em28xx-new-0.0.20080614.160257450985987.ebuild:
  Allow mercurial revisions with leading zeroes

  23 Jun 2008; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> -em28xx-new-0_p20080619.ebuild,
  +em28xx-new-0.0.20080614.160257450985987.ebuild:
  Download snapshots directly from upstream, avoid cd ${S} in src_compile

  23 Jun 2008; Thomas Anderson <gentoofan23@gentoo.org>
  em28xx-new-0_p20080619.ebuild:
  Revert revision #6351, cd ${S} is really needed

  22 Jun 2008; Thomas Anderson <gentoofan23@gentoo.org>
  em28xx-new-0_p20080619.ebuild:
  Remove redundant directory change in src_compile, src_compile starts in ${S}

  19 Jun 2008; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> +em28xx-new-0_p20080619.ebuild:
  add em28xx-new snapshot to satisfy carlo

  19 Jun 2008; Chi-Thanh Christopher Nguyen (chithead)
  <chithanh@cs.tu-berlin.de> +em28xx-new-9999.ebuild, +metadata.xml:
  add media-tv/em28xx-new ebuild from bug 228111
