@@ -3,6 +3,6 @@ DIST 91c0d8704a03.tar.gz 432648 RMD160 f85a1a466c40a9fa85b382995317dc84bb8a274e 
 DIST fbbf32d0aaf4.tar.gz 441762 RMD160 16134cf0232414c89bfbf8cd88cf371bb88e77bd SHA1 9341adf6591c2849d8d596c3f113a0153bf1332c SHA256 f1e7bb37a7c999a5f99413696e53a6f8fd7f152c7edbb860639ba33a72c3b0a7
 EBUILD em28xx-new-0.0.20080614.160257450985987.ebuild 1510 RMD160 ab5ccd32b7225b7162f74af8c9639274ff3c810e SHA1 ef7a1aa60c61ee5eee5e7f78c326cbd5c3de57ff SHA256 a7050df402d27d2a343fab0f98af6a80e726ee5ee7e694f05c8075e6c8827386
 EBUILD em28xx-new-0.0.20080709.276798609861364.ebuild 1358 RMD160 901c1a2d603d63fe231937e7dc175b83b777ef3f SHA1 7f5741e515a1be586875d0d814b392b2e114479a SHA256 121c38d73cecfe94e23bfddaf67c5e0d7ab3e5eedc99882da158a976c428d958
-EBUILD em28xx-new-9999.ebuild 1417 RMD160 e09c0156dc4ae4231048bf6c196d699a7a2cdf69 SHA1 bcfc57adcb518386077de981cd191de83f3a4620 SHA256 6b1125450a10ab6b290b1ee665535d4c68fbb892df85ded7e628fc070522ce59
-MISC ChangeLog 1400 RMD160 7007927c32de399692e2ad29643e0af479ed3418 SHA1 129312354b7b6f39f7f9da649de6e71b64e78353 SHA256 75a7429fd0ca2a7923fef5554a1ba860c8980560b2d978b457c234541f75e4bf
+EBUILD em28xx-new-9999.ebuild 1178 RMD160 de115cc59e0f7e18da0030b95c3d4eb8d77e2e6d SHA1 3b2e1e6ae1ac4946ec5b2b8c79cd82808e8a657c SHA256 0fab143a44ecf58f9489f02e1feeedb755a3a902926078b469dd8811ac4ee4ae
+MISC ChangeLog 1563 RMD160 f304356dfce77a513581ad65256b1c09c8e3b69e SHA1 232391b5edccb1d40305036172644d9e70f91217 SHA256 04cf42b416b4d865ae1cf057083a97f0c89c7cc0ed84e388b06a290bfbe50ba9
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
